2020-03-16 Wiley E. Hill <wileyhill@gmail.com>

    * tests/test_line_object.c: Revise check_line_object_modify to modify
      the line to the on-entry position before returning. Add checks for
      geda_line_object_rotate.

    * tests/test_math.c: Check geda_math_degrees_to_radians with 180 degrees.

2020-02-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_list.c: Revise geda_object_list_scale to handle the
      case of picture object types.

    * src/object/o_picture_object.c: Validate GedaObject in function
      geda_picture_object_get_height. Add todo documentation template.
      Add functions:

          * geda_picture_object_get_lower_x
          * geda_picture_object_get_lower_y
          * geda_picture_object_get_upper_x
          * geda_picture_object_get_upper_y

    * tests/test_object_list.c: Check scale picture in list.

2020-02-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_transform.c: Add Doxygen group math-transform-proc.

    * src/object/o_get.c: Declare GedaObject argument a const:

          * geda_object_get_nearest_point

    * src/object/o_picture_object.c: Declare GedaObject argument a const:

          * geda_picture_object_get_filename
          * geda_picture_object_get_height
          * geda_picture_object_get_mask_data

2020-02-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_hatch.c: Add todo documentation template.

    * src/math/m_line.c: Add Doxygen group math-line-proc.

    * libgeda/src/math/m_math.c: Add Doxygen group math-general-proc.

    * libgeda/src/math/m_polygon.c: Add Doxygen group math-polygon-proc.

    * src/object/o_*_object.c: Declare GedaObject argument a const:

          * geda_path_object_get_nearest_point
          * geda_picture_object_get_nearest_point
          * geda_text_object_get_nearest_point

    * src/object/o_picture_object.c: Fix function geda_picture_object_scale;
      copy/paste error; box->picture.

2020-02-17 Wiley E. Hill <wileyhill@gmail.com>
